# BayesSUR

./: .gitignore  DESCRIPTION  LICENSE  MAPK_pathway.txt  Makefile  NAMESPACE  NEWS.md  README.md  article_code.R  blockLabels.txt  check_and_build.R  cleanup  compare.R  configure  main.cpp  sample_conformant_data.R  test.R
BayesSUR/: DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS.md  README.html  README.md  article_code.R  cleanup  configure  configure.ac  elpd.R  example_data.rda  main.cpp  mrfG.txt  sample_conformant_data2.R  test.R
BayesSUR/BayesSUR/: DESCRIPTION  NAMESPACE  configure  hyperpar.xml
BayesSUR/BayesSUR/R/: RcppExports.R  example_ground_truth.R  manhattan.R  plot.BayesSUR.R  plotEstimator.R  plotMCMCdiag.R  plotManhattan.R  plotNetwork.R  plotResponseGraph.R  runSUR.R  summary.BayesSUR.R
BayesSUR/BayesSUR/autom4te.cache/: output.0  requests  traces.0
BayesSUR/BayesSUR/data/: example_eQTL.rda  example_ground_truth.rda
BayesSUR/BayesSUR/man/: example_ground_truth.Rd  mcmcDiag.Rd  plot.Rd  plotEstimator.Rd  plotMCMCdiag.Rd  plotManhattan.Rd  plotNetwork.Rd  plotResponseGraph.Rd  summary.BayesSUR.Rd
BayesSUR/BayesSUR/src/: BayesSUR.cpp  Makevars.in  Makevars.win  RcppExports.cpp  SUR_Chain.cpp  SUR_Chain.h  distr.cpp  drive.cpp  junction_tree.h
BayesSUR/R/: BayesSUR.R  RcppExports.R  coef.BayesSUR.R  datasets.R  elpd.R  exampleEQTL.R  exampleGDSC.R  example_GDSC.R  example_GDSC_targets.R  example_data.R  example_eQTL.R  fitted.BayesSUR.R  get.estimator.R  getEstimator.R  mcmcDiag.R  plot.BayesSUR.R  plot.CPO.R  plot.Estimator.R  plot.MCMCdiag.R  plot.Manhattan.R  plot.Network.R  plot.ResponseGraph.R  plotCPO.R  plotEstimator.R  plotGraph.R  plotMCMCdiag.R  plotManhattan.R  plotNetwork.R  plotResponseGraph.R  predict.BayesSUR.R  print.BayesSUR.R  randVec.R  runSUR.R  summary.BayesSUR.R  targetGene.R
BayesSUR/autom4te.cache/: output.0  requests  traces.0
BayesSUR/data/: datalist  exampleGDSC.rda  example_GDSC.rda  example_GDSC_targets.rda  example_data.rda  example_eQTL.rda
BayesSUR/inst/: CITATION  CITATION.txt
BayesSUR/inst/doc/: BayesSUR-RE.R  BayesSUR-RE.Rmd  BayesSUR-RE.html
BayesSUR/man/: BayesSUR.Rd  BayesSUR_internal.Rd  coef.BayesSUR.Rd  elpd.Rd  exampleEQTL.Rd  exampleGDSC.Rd  example_GDSC.Rd  example_GDSC_targets.Rd  example_data.Rd  example_eQTL.Rd  fitted.BayesSUR.Rd  get.estimator.Rd  getEstimator.Rd  manhattan.Rd  plot.BayesSUR.Rd  plot.CPO.Rd  plot.Estimator.Rd  plot.MCMCdiag.Rd  plot.Manhattan.Rd  plot.Network.Rd  plot.Rd  plot.ResponseGraph.Rd  plot.estimator.Rd  plot.network.Rd  plotCPO.Rd  plotEstimator.Rd  plotGraph.Rd  plotMCMCdiag.Rd  plotManhattan.Rd  plotNetwork.Rd  plotResponseGraph.Rd  predict.BayesSUR.Rd  print.BayesSUR.Rd  randVec.Rd  runSUR.Rd  summary.BayesSUR.Rd  targetGene.Rd
BayesSUR/src/: BayesSUR.cpp  ESS_Atom.h  ESS_Sampler.h  HESS_Chain.cpp  HESS_Chain.h  HRR_Chain.cpp  HRR_Chain.h  Makevars.in  Makevars.win  Parameter_types.h  RcppExports.cpp  SUR_Chain.cpp  SUR_Chain.h  distr.cpp  distr.h  drive.cpp  drive.h  global.cpp  global.h  junction_tree.cpp  pugiconfig.hpp  utils.cpp  utils.h
BayesSUR/vignettes/: BayesSUR-RE.Rmd  BayesSUR-RE.html  BayesSUR-RE.md  BayesSUR.pdf.asis
R/: BayesSUR.R  RcppExports.R  coef.BayesSUR.R  elpd.R  exampleEQTL.R  example_GDSC.R  get.estimator.R  plot.BayesSUR.R  plot.CPO.R  plot.Manhattan.R  plot.estimator.R  plot.network.R  plot.response.graph.R  plotCPO.R  plotMCMCdiag.R  plotManhattan.R  plotNetwork.R  plotResponseGraph.R  print.BayesSUR.R  runSUR.R  summary.BayesSUR.R  targetGene.R
R2SSUR/: DESCRIPTION  NAMESPACE  configure  configure.ac
R2SSUR/R/: R2SSUR.R  RcppExports.R  getEst.R  manhattan.SSUR.R  mcmcDiag.R  plot.SSUR.R  postDiag.R  runSSUR.R  summary.SSUR.R
R2SSUR/data/: example_data.rda
R2SSUR/man/: R2SSUR-package.Rd  R2SSUR.Rd  R2SSUR_internal.Rd  example_data.Rd  example_ground_truth.Rd  runSSUR.Rd
R2SSUR/src/: ESS_Atom.h  ESS_Sampler.cpp  ESS_Sampler.h  HESS_Chain.cpp  HESS_Chain.h  Parameter_types.h  R2SSUR.cpp  RcppExports.cpp  SUR_Chain.cpp  SUR_Chain.h  distr.cpp  distr.h  drive.cpp  drive.h  global.cpp  global.h  junction_tree.cpp  main.cpp  utils.cpp  utils.h
data/: datalist  exampleEQTL.rda  example_GDSC.rda  example_eQTL.rda  targetGene.rda
man/: BayesSUR.Rd  (+17 more)
(+38 files in other folders)
